<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SettingsActivity" >

    <TextView
        android:id="@+id/tvSettingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/settingsTitleText"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvImgSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvSettingsTitle"
        android:layout_below="@+id/tvSettingsTitle"
        android:layout_marginTop="22dp"
        android:text="@string/imgSize"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvColorFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvImgSize"
        android:layout_below="@+id/tvImgSize"
        android:layout_marginTop="24dp"
        android:text="@string/colorFilter"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvImgType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvColorFilter"
        android:layout_below="@+id/tvColorFilter"
        android:layout_marginTop="23dp"
        android:text="@string/imgType"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/spinnerImgSize"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvColorFilter"
        android:layout_below="@+id/tvSettingsTitle"
        android:layout_toRightOf="@+id/tvImgSize"
        android:entries="@array/image_size_array"
        android:gravity="right|center_horizontal|clip_horizontal"
        tools:listitem="@android:layout/simple_spinner_item" />

    <Spinner
        android:id="@+id/spinnerColorFilter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:entries="@array/color_filter_array"
        android:layout_above="@+id/tvImgType"
        android:layout_alignLeft="@+id/spinnerImgSize"
        android:layout_below="@+id/spinnerImgSize" />

    <Spinner
        android:id="@+id/spinnerImgType"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:entries="@array/image_type_array"
        android:layout_alignBottom="@+id/tvImgType"
        android:layout_alignLeft="@+id/spinnerColorFilter"
        android:layout_below="@+id/spinnerColorFilter" />

    <TextView
        android:id="@+id/tvSiteFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvImgType"
        android:layout_below="@+id/tvImgType"
        android:layout_marginTop="24dp"
        android:text="@string/siteFilter"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etSIteFilterInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvSiteFilter"
        android:layout_toRightOf="@+id/tvColorFilter"
        android:ems="10"
        android:hint="@string/webSiteFilter" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnSaveSettings"
        android:layout_alignBottom="@+id/btnSaveSettings"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/btnSaveSettings"
        android:onClick="onCancel"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/btnSaveSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvSiteFilter"
        android:layout_below="@+id/tvSiteFilter"
        android:layout_marginLeft="54dp"
        android:layout_marginTop="34dp"
        android:onClick="onSaveSettings"
        android:text="@string/save" />

</RelativeLayout>
